<resources>
  <string name="app_name">PlayerManage</string>

  <!-- PlayerManage-->
  <string name="title_player_manage">PlayerManagement</string>
  <string name="hint_first_name">FirstName</string>
  <string name="hint_last_name">LastName</string>
  <string name="hint_first_name_phonetic">FirstNamePhonetic</string>
  <string name="hint_last_name_phonetic">LastNamePhonetic</string>
  <string name="hint_memo">memo</string>
  <string name="player_save">Save</string>
  <string name="message_need_first_name">Last name is required</string>

  <!-- Player-->
  <string name="player_title">Sex</string>
  <string name="player_all">All</string>
  <string name="player_male">Male</string>
  <string name="player_female">Female</string>
  <string name="player_rank">Rank</string>
  <string name="player_no_rank">No Rank</string>
  <string name="title_player_rank_select">Rank Select</string>
  <string name="player_rank_select_cancel">Cancel</string>
  <string name="player_rank_all">All</string>

  <!--PlayerSearch-->
  <string name="search_tool">Search tool</string>
  <string name="player_search_hint">Player Search</string>

  <!--License-->
  <string name="title_app_license">License</string>

  <!--GooglePlus-->
  <string name="google_plus_dialog_title">To support an app +1</string>
  <string name="google_plus_dialog_message">If you like the app , and then cheer ask.</string>

  <!-- Review-->
  <string name="review_dialog_title">Please Review</string>
  <string name="review_dialog_text">As Always,thank you for your use.\nIf I ask you are satisfied if support of review.</string>
  <string name="review_dialog_review">Review</string>
  <string name="review_dialog_demand">Write a demand</string>
  <string name="review_dialog_cancel">No</string>
</resources>
