<?xml version="1.0" encoding="utf-8"?>
<layout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name"
            style="@style/PlayerEditText"
            />
        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name"
            style="@style/PlayerEditText"
            />
        <EditText
            android:id="@+id/last_name_phonetic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name_phonetic"
            style="@style/PlayerEditText"
            />
        <EditText
            android:id="@+id/first_name_phonetic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name_phonetic"
            style="@style/PlayerEditText"
            />
        <LinearLayout
            android:id="@+id/rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/app_white"
            android:orientation="horizontal"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:text="@string/player_rank"
              style="@style/PlayerEditText"
              />
          <TextView
              android:id="@+id/rank_text"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:text="@string/player_no_rank"
              style="@style/PlayerEditText"
              />
        </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
          <RadioButton
              android:id="@+id/male_rdb"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="true"
              android:text="@string/player_male"
              />
          <RadioButton
              android:id="@+id/female_rdb"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/player_female"
              />
        </RadioGroup>
        <EditText
            android:id="@+id/memo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/hint_memo"
            style="@style/PlayerEditText.Memo"
            />
      </LinearLayout>
    </ScrollView>
  </LinearLayout>
</layout>
